# Project-final

./: Project-final.sln  Project-final.vcxproj  Project-final.vcxproj.filters  imgui.ini
HttpSrc/: HttpSrc.sln
Project-final/x64/Debug/: Project-final.exe.recipe  vc143.idb
Project-final/x64/Debug/Project-final.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project-final.lastbuildstate  VcpkgInstallManifestx64-windows.read.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
openssl-3/: version.txt
src/: CMakeLists.txt  CommonObject.h  ConnectedApp.cpp  ConnectedApp.h  DownloadThread.cpp  DownloadThread.h  DrawThread.cpp  DrawThread.h  GuiMain.cpp  GuiMain.h  ImageCache.h  ImageLoaderr.h  ShaderUtils.cpp  ShaderUtils.h  httplib.h  input_with_server.cpp  input_with_server.h  main.cpp  stb_image.h
src/ServerSide/: CMakeLists.txt  ImageDownloader.cpp  ImageDownloader.h  ServerWithInput.cpp  ServerWithInput.h  main.cpp  movie_data.json
